# musicality

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: tests.md
.dvc/: config
configs/: download.yaml  train.yaml
configs/data/: ballroom.yaml  brid.yaml
configs/model/: beat.yaml  cnn.yaml  tcn.yaml  wav2vec2.yaml
configs/trainer/: default.yaml
data/: .gitignore  swing.dvc
docs/: mobilecompanion_implementation_plan.md  mobilecompanionfeasibility.md
musicality/: augmentations.py  hdf5_getters.py  loader.py  losses.py
musicality/callbacks/: error_plot.py  metrics_logger.py
musicality/dataformats/: __init__.py  dataformat.yaml
musicality/loaders/: __init__.py  beat_dataset.py  loader.py
musicality/models/: huggingface.py  tcn.py  tempo_net.py  torch_audio.py
musicality/splits/: splitter.py
musicality/trainers/: model.py  tempo_module.py  train.py
tests/: test_annotator_audio.py  test_annotator_data.py  test_annotator_metadata.py  test_annotator_naming.py  test_annotator_waveform.py  test_beat_dataset.py  test_download.py  test_get_beat.py  test_loader.py  test_mobile_companion_server.py  test_tempo_dataset.py  test_training.py
tools/: download_dataset.py  inspect_track.py  list_datasets.py  plot_tempo_histograms.py  summarize_datasets.py  train.py
tools/annotator/: __main__.py  audio.py  data.py  main_window.py  metronome_widget.py  naming.py  recorder.py  tap_tempo_widget.py  waveform_widget.py
tools/mobile_companion/: README.md  server.py
tools/mobile_companion/static/: app.js  index.html  manifest.json  queue.js  sw.js
