[project]
name = "musicality"
version = "1.0"
requires-python = ">=3.14"

dependencies = [
    "chardet<6",
    "click>=8.3.1",
    "mirdata>=1.0.0",
    "numpy",
    "pytest>=9.0.2",
    "tables",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
[project.optional-dependencies]
test = [
    "black",
    "pytest"
]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
exclude = ["data"]
