[project]
name = "musicality"
version = "1.0"
requires-python = ">=3.14"

dependencies = [
    "chardet<6",
    "click>=8.3.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "mirdata>=1.0.0",
    "numpy",
    "pytest>=9.0.2",
    "soundfile>=0.13.1",
    "tables",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
[project.optional-dependencies]
test = [
    "black",
    "pytest"
]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
exclude = ["data"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:You are trying to `self.log\\(\\)` but the `self.trainer` reference is not registered",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
]
