[project]
name = "musicality"
version = "1.0"
requires-python = ">=3.14"

dependencies = [
    "chardet<6",
    "click>=8.3.1",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "mirdata>=1.0.0",
    "numpy",
    "pyside6>=6.11.0",
    "pytest>=9.0.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tables",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
[project.optional-dependencies]
test = [
    "black",
    "pytest"
]

# Python modules and packages that are included in the
# distribution package (and therefore become importable)
[tool.setuptools.packages.find]
exclude = ["data"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:You are trying to `self.log\\(\\)` but the `self.trainer` reference is not registered",
    # Lightning internal deprecation in _pytree.py — not actionable from user code
    "ignore:`isinstance\\(treespec, LeafSpec\\)` is deprecated",
    # PyTorch STFT pre-allocates an empty out-tensor internally; harmless in practice
    "ignore:An output with one or more elements was resized since it had shape",
    # Test batches are intentionally tiny; logging interval mismatch is expected
    "ignore:The number of training batches.*is smaller than the logging interval",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "ruff>=0.15.12",
]
